--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:layout_above="@+id/bottom_navigation"
         android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
